# genmail-

./: .gitignore  Cargo.toml
configs/: config.json  templates.json
src/: app.rs  main.rs  window.rs
src/app/: configshandler.rs  modulars.rs
src/dbadapt/: mod.rs  none.rs  sqlite.rs
