[package]
name = "genmail"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.24", default-features = false, features = [
	"glow",
	"x11",
	"default_fonts",
	"persistence"
] }
egui = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
odbc-api = "28.2.0"
regex = "1"
